--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
 @import url(global.css);
 @import url(utility.css);
 @import url(header.css);
+@import url(section.css);
+@import url(cat-des.css);
+@import url(next-events.css);
