--- a/styles/global.css
+++ b/styles/global.css
@@ -3,10 +3,18 @@
   padding: 0;
   box-sizing: border-box;
 }
+body {
+  overflow-x: hidden;
+}
 ul {
   list-style: none;
 }
 a {
   text-decoration: none;
   color: inherit;
+}
+img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
