--- a/styles/next-events.css
+++ b/styles/next-events.css
@@ -20,3 +20,14 @@
 .item h3, span {
   padding-inline: 16px;
 }
+
+.ver-mais {
+  margin-block: 24px;
+  display: flex;
+  justify-content: end;
+}
+.ver-mais a {
+  background-color: #000;
+  color: #fff;
+  padding: 10px 56px;
+}
